# bsv-agent-template

./: .dev.vars.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json  wrangler.toml
src/: lib.rs
