[package]
name = "bsv-agent-template"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# PRIVATE: These crates are not on crates.io yet.
# Contact @Calgooon on GitHub for access.
# https://github.com/Calgooon
bsv-auth-cloudflare = { path = "../rust-middleware/bsv-auth-cloudflare" }
bsv-sdk = { path = "../rust-sdk", features = ["auth", "wallet", "transaction", "wasm"] }

# Public crates (from crates.io)
worker = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
